<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.CoinDetails">


    <RelativeLayout
        android:id="@+id/lytBasicDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvCoinPair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/coinPair"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCoinPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/dummyPrice"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvPriceChangePercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCoinPrice"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/poppins"
            android:text="@string/priceChange"
            android:textColor="@color/green"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvMarketBehave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCoinPrice"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/poppins"
            android:text="@string/marketUp"
            android:textColor="@color/green"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPriceChangePercentage"
            android:layout_alignParentLeft="true"
            android:fontFamily="@font/poppins"
            android:text="@string/timeFrame"
            android:textColor="@color/green"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tvDurBehave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMarketBehave"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/poppins"
            android:text="@string/last"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lytBasicDetails">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_margin="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/h"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_margin="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/d"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
            android:layout_margin="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/w"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="10dp"
android:layout_margin="2dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/m"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.github.mikephil.charting.charts.CandleStickChart
        android:id="@+id/detailsChart"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="-40dp"
        android:layout_below="@+id/lytBasicDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>